<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/purple_700">


    <TextView
        android:id="@+id/textView12"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/jnama"
        app:layout_constraintBottom_toTopOf="@+id/edNama"
        app:layout_constraintStart_toStartOf="@+id/edNama" />

    <EditText
        android:id="@+id/edNama"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="44dp"
        android:background="@color/white"
        android:drawableLeft="@android:drawable/ic_menu_myplaces"
        android:drawableTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/inputnama"
        android:inputType="textEmailAddress"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView14"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="12dp"
        android:text="@string/semail"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="38dp"
        android:background="@color/white"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:drawableTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/inputmail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/edPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNama"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView15"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/srepass"
        app:layout_constraintBottom_toTopOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="@+id/edPassword" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/inputpassword"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView16"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="17dp"
        android:text="@string/srpass"
        app:layout_constraintBottom_toTopOf="@+id/edtRepassword"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <EditText
        android:id="@+id/edtRepassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="41dp"
        android:background="@color/white"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/inputpassword"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="188dp"
        android:layout_height="149dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toTopOf="@+id/edNama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/globe" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="215dp"
        android:layout_height="0dp"
        android:layout_marginBottom="137dp"
        android:background="#F0A500"
        android:text="@string/sregister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRepassword"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>